fix: scrollbar && button delete

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -6,3 +6,24 @@ body {
   -webkit-font-smoothing: antialiased;
   text-rendering: optimizeLegibility;
 }
+
+* {
+  ::-webkit-scrollbar {
+    width: 8px;
+  }
+
+  ::-webkit-scrollbar-track {
+    background: rgba(33, 20, 20, 0.6);
+
+    border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background: rgba(70, 28, 124, 0.815);
+    border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: white;
+  }
+}
